--- a/hep-th-9412131/9412131-psu.tex
+++ b/hep-th-9412131/9412131-psu.tex
@@ -20,7 +20,7 @@
 % is not.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input harvmac
+\input /Users/psu/arxiv-psu/helpers/harvmac-psu.tex
 
 %%%%%%%%%%%%%%%%%%
 %
@@ -48,7 +48,7 @@
 }
 
 %**************************************************
-\Title{RU-94-91}{\vbox{Lectures on Black Holes and Information Loss }}
+\Title{RU-94-91}{{Lectures on Black Holes and Information Loss }}
 \bigskip
 \centerline{\it
 T. Banks  \footnote{*}
@@ -63,7 +63,7 @@ DE-FG05-90ER40559  .} }
 \noindent
 \bigskip
 %\vskip 2cm
-\baselineskip 18pt
+%\baselineskip 18pt
 \noindent
 In these lectures, the author's point of view on the problem of Hawking
 Evaporation of Black Holes is explained in some detail.  A possible resolution
@@ -392,7 +392,7 @@ a new paradigm has developed which takes the Schwarzchild observer's point of
 view
 as the basis of the treatment of the astrophysics of black holes, and their
 interactions
-with the external environment.  The Membrane Paradigm\ref\membrane{D.A.
+with the external environment.  The Membrane Paradigm \ref\membrane{D.A.
 MacDonald, R.H. Price, K.S. Thorne, {\bf The Membrane Paradigm}, Yale
 University Press}, as it is called, claims that all
 interactions of the black hole with the external world can be treated
@@ -435,7 +435,7 @@ particles behind a receding horizon.  However, the asymptotic observer will
 be able to
 account for much of what he observes in terms of a gas of ``stranded
 strings'' glued to the
-a membrane on the {\it stretched horizon}\ref\stretch{L.Susskind,
+a membrane on the {\it stretched horizon} \ref\stretch{L.Susskind,
 L.Thorlacius, R.Uglum, {\it Phys. Rev.}{\bf D48},(1993),3743.}.  I
 will suggest below
 that there is probably some real information loss to the asymptotic observer,
@@ -503,7 +503,7 @@ scale $L_S$, is larger
 than the Planck length, the small dimensionless loop expansion
 parameter being the square of the ratio $L_P \over L_S$.
 
-According to Hawking's calculation\ref\hawk{S.Hawking,{\it Comm. Math.
+According to Hawking's calculation \ref\hawk{S.Hawking,{\it Comm. Math.
 Phys.}{\bf 43},(1975),199.}
  the expression for the outgoing density matrix is
 \eqn\outdensity{\rho = e^{-{16\pi^2 GM H \over h}}}
@@ -552,7 +552,7 @@ metric remained static for all time, even though it is emitting thermal
 radiation.  This
 gives us a trivial volume infinity.  The other infinity is more interesting,
 and was first
-discussed by 't Hooft\ref\entropy{G. 't Hooft, {\it Nucl. Phys.}{\bf B256},
+discussed by 't Hooft \ref\entropy{G. 't Hooft, {\it Nucl. Phys.}{\bf B256},
 (1985),727.}.  Its origin is in ultraviolet divergences.  Conventional
 quantum field theory has an infinite number of states in any arbitrarily
 small volume of space
@@ -563,7 +563,7 @@ spacelike surface and
 make an imaginary line cutting it into two, the entropy of entanglement of
 the degrees of
 freedom on one side with those on the other, is
-divergent\ref\srednicketal{M.Srednicki, {\it Phys. Rev. Lett.}
+divergent \ref\srednicketal{M.Srednicki, {\it Phys. Rev. Lett.}
 {\bf 71},(1993),666; B.DeWitt,{\it Phys. Rep.}{\bf 19C},(1975),297; \break
 W.Unruh, N.Weiss, {\it Phys. Rev.}{\bf D29},(1984),1656;
 L.Bombelli, R.Kaul, R. Sorkin, {\it Phys. Rev.}{\bf D34},(1986),373;
@@ -624,8 +624,8 @@ the
 conventional formalism of quantum field theory.  The semiclassical
 picture of Hawking evaporation is valid for most of the evaporation of a large
 black hole\foot{This contention has been vigorously challenged by 't
-Hooft\ref\hooft{G. 't Hooft,{\it Nucl. Phys.}{\bf B335},(1990),138.} and
-others\ref\verlinde{E.Verlinde, H.Verlinde,{\it Nucl. Phys.}{\bf B406},
+Hooft \ref\hooft{G. 't Hooft,{\it Nucl. Phys.}{\bf B335},(1990),138.} and
+others \ref\verlinde{E.Verlinde, H.Verlinde,{\it Nucl. Phys.}{\bf B406},
 (1993),43.}.
 The most compelling argument that it is correct comes from the large N
 analysis of two dimensional evaporating black holes.  The large N
@@ -644,8 +644,8 @@ large,
 the Hawking calculation will be accurate to the past of the asymptotically
 null spacelike slice labelled $99$ in the Penrose diagram of Fig. 4.
 
-\ifig\ffour{Penrose Diagram Illustrating the Argument That Information Cannot
-Get Out of a Black Hole Until Times Longer than The Hawking Lifetime}
+\ifig\ffour{Penrose diagram illustrating the argument that information cannot
+get out of a black hole until times Longer than the Hawking lifetime}
 {\epsfysize=6cm \epsfbox{f4.eps}}
 
 We can examine the state of that portion of the world which is behind
@@ -711,7 +711,7 @@ quantum dynamics of spacetime.
 
 The only one of these radical
 approaches that the author of the present lectures can make even a
-pretense of understanding, is that of Susskind\ref\susstring{L. Susskind,
+pretense of understanding, is that of Susskind \ref\susstring{L. Susskind,
 {\it Phys. Rev.}{\bf D50},(1994),2700, hep-th 9309145;
 {\it ibid.}{D49},(1994),6606;{\it Phys.}\break
 {Rev. Lett.}{\bf 71},(1993),2367.}.
@@ -769,8 +769,8 @@ emitted
 before $99$\foot{Here again we invoke the tensor product structure of the
 Hilbert space in local quantum field theory.}.
 The state of the system is thus
-\eqn\corrstate{\vert\Psi > = \sum \phi_{na}\vert a> \vert n>}
-where $\vert a>$ is a state of the early time and $\vert n>$ a state of
+\eqn\corrstate{\vert\Psi \rangle = \sum \phi_{na}\vert a\rangle \vert n\rangle}
+where $\vert a\rangle$ is a state of the early time and $\vert n\rangle$ a state of
 the
 late
 time radiation.
@@ -782,13 +782,13 @@ than $T$, but small enough to be spacelike relative to the region where most
 of the early time Hawking radiation is.  This is, to good approximation,
 a
 positive
-operator which acts only on the states $\vert n>$\foot{If there is a
+operator which acts only on the states $\vert n \rangle$\foot{If there is a
 hole in
 this
 argument, which I doubt, this is the most likely place for it to be
 .  Radiation of large amounts of negative energy density might change our
 conclusions.}.  Its expectation value is
-\eqn\energy{<E> = \sum |\phi_{na} |^2 E_n < .01 M}
+\eqn\energy{\langle E \rangle = \sum |\phi_{na} |^2 E_n < .01 M}
 The only way to make \energy consistent with \entropy is to have many low
 lying
 energy levels $E_n$.  The late time radiation must therefore
@@ -831,7 +831,7 @@ purposes, to the remnant scenario.
 Further evidence for this contention comes from
 the
 investigation of Hawking radiation from moving mirrors by Carlitz and
-Willey\ref\carlitz{R.Carlitz, R.Willey, {\it Phys. Rev.}{\bf D36},(1987),
+Willey \ref\carlitz{R.Carlitz, R.Willey, {\it Phys. Rev.}{\bf D36},(1987),
 2336; F.Wilczek, hep-th 9302096.}.
 A moving mirror with a fixed trajectory (or indeed any fixed spacetime
 geometry
@@ -970,7 +970,7 @@ where $S$ is the scattering matrix.  Hawking proposed instead a general
 linear
 relation\foot{Nonlinear density matrix evolution equations lead to
 nonlocal
-phenomena which Polchinski\ref\polchinski{J.Polchinski, {\it Phys. Rev. Lett.}
+phenomena which Polchinski \ref\polchinski{J.Polchinski, {\it Phys. Rev. Lett.}
 {\bf 66},(1991),397.} has dubbed "Everett Phones".
 EPR correlations can be used to send messages in such theories.
 It is not clear to exactly what extent this is ruled out by experiment,
@@ -979,7 +979,7 @@ but we will not discuss nonlinear density matrix evolution in this review.}
 If the $\$$ matrix factorizes into the product of an $S$ matrix and its
 inverse, then we have unitary evolution, preserving purity.  If it does
 not
-so factorize then purity is lost.  Hawking proposed\ref\dolarmat{S.Hawking,
+so factorize then purity is lost.  Hawking proposed \ref\dolarmat{S.Hawking,
 {\it Phys. Rev.}{\bf D14},(1976),2460.} that
 the
 true $\$$ matrix of the world had a small, nonfactorizable term of the form
@@ -989,7 +989,7 @@ powers of
 the Planck mass.
 
 Unfortunately these apparently small corrections to the $\$$ matrix are
-not small at all.  To see this\ref\bps{T. Banks, M.Peskin, L. Susskind,
+not small at all.  To see this \ref\bps{T. Banks, M.Peskin, L. Susskind,
 {\it Nucl. Phys.}{\bf B244},(1984),135.} we will have to make a small
 extension of
 Hawking's $\$ $ matrix formalism and discuss local time evolution
@@ -1016,7 +1016,7 @@ be conserved.  To do this it is convenient to expand the four index object
 ${\cal H}$ as a sum of tensor products of matrices.  We then find the
 most
 general probability and hermiticity conserving linear equation to
-be\ref\lindblad{G.Lindblad, {\it Comm. Math. Phys.}{\bf 48},(1976),119.}
+be \ref\lindblad{G.Lindblad, {\it Comm. Math. Phys.}{\bf 48},(1976),119.}
 \eqn\evoluttwo{\dot{\rho} = i [H,\rho ] + C_{\alpha\beta}[O_{\alpha},
 [O_{\beta}, \rho ]]}
 where $H$ is hermitian and $C_{\alpha\beta}$ is a real matrix.
@@ -1032,7 +1032,7 @@ coupled to
 random sources via a hamiltonian
 \eqn\randsource{H_R = H + J_{\alpha}(t) O_{\alpha}}
 where the $J$'s have white noise correlation functions
-\eqn\corrfcn{< J_{\alpha}(t) J_{\beta}(s)> = C_{\alpha\beta}\delta (t - s)}
+\eqn\corrfcn{\langle J_{\alpha}(t) J_{\beta}(s) \rangle = C_{\alpha\beta}\delta (t - s)}
 This interpretation makes most of the important features of
 the equation \evoluttwo obvious.  In particular, although the evolution
 equation is time translation invariant, it does not conserve energy.
@@ -1064,7 +1064,7 @@ invariance \ref\sredpurity{M.Srednicki, {\it Nucl. Phys.}{\bf B410},(1993),
 for the density matrix could arise from integrating out processes which
 are localized in space and time.
 
-It has been argued by Hawking\ref\hawkrebut{S.Hawking, {\it Nucl. Phys.}
+It has been argued by Hawking \ref\hawkrebut{S.Hawking, {\it Nucl. Phys.}
 {\bf B244},(1984),135.}, that these arguments must
 be wrong.  Adopting Dyson's \ref\dyson{F.Dyson, Institute for Advanced Study
 preprint, 1976, {\it Unpublished}.}idea that information loss is
@@ -1082,7 +1082,7 @@ over topologies can be rewritten as a theory in which
 the constants of nature are uncertain, but once they are determined by
 experiment,
 the local dynamics of the universe is described by quantum mechanics
-\ref\worm{S.Coleman, {\it Nucl. Phys.}{\bf B307},(1988),864; S.Giddings,
+ \ref\worm{S.Coleman, {\it Nucl. Phys.}{\bf B307},(1988),864; S.Giddings,
 A.Strominger, {\it Nucl. Phys.}{\bf 307},\break (1988),354;
  T. Banks, {\it Nucl. Phys.}{\bf B309},(1988),643, {\it Physicalia}{\bf 12},
 (1990),19.}.
@@ -1104,9 +1104,9 @@ to be exactly zero.  A theory of information loss which naturally explained
 the small dimensionless parameter, would be consistent with experiment.
 
 An interesting model which attempts to incorporate this idea has been
-constructed recently by Strominger\ref\andymystery{A.Strominger, hep-th
+constructed recently by Strominger \ref\andymystery{A.Strominger, hep-th
  9405094.}.  He modifies the
-RST\ref\rst{J.Russo, L. Thorlacius, L.Susskind, {\it Phys. Rev.}{\bf D47},
+RST \ref\rst{J.Russo, L. Thorlacius, L.Susskind, {\it Phys. Rev.}{\bf D47},
 (1993),3444.} model of two
 dimensional black hole evaporation by treating the model as an
 open string theory with a string coupling that depends on the values of
@@ -1163,7 +1163,7 @@ M.Srednicki ({\it Private Communication}) has pointed out that in the absence
 of actual
 experiments on evaporation black holes we have no right to invoke the
 empirical success of the postulate of cluster decomposition.  Note also
-that Polchinski and Strominger\ref\polstrom{A.Strominger, J.Polchinski,
+that Polchinski and Strominger \ref\polstrom{A.Strominger, J.Polchinski,
 hep-th 9407008.} have recently presented an
 extension of Strominger's work and attempted to answer Susskind's objections.
 I have been unable to understand their paper, but perhaps one should
@@ -1194,7 +1194,7 @@ Although Dyson's picture is not directly relevant to the black hole information
 problem, his idea that the information ``just goes somewhere else'' turns out
 to be crucial.  Chronologically, the second step in the
 unravelling of the mystery came with the work of Guth and Farhi
-\ref\guth{A.Guth, E. Farhi, {\it Phys. Lett.}{\bf B183},(1987),149.}
+ \ref\guth{A.Guth, E. Farhi, {\it Phys. Lett.}{\bf B183},(1987),149.}
 on a subject they facetiously called ``the creation of a universe in the
 laboratory''.
 In modern versions of the inflationary universe, our current horizon volume
@@ -1303,7 +1303,7 @@ in modern theories of elementary particle physics, monopoles arise as classical
 solutions to the field equations, which may have internal variations on scales
 much larger than the Planck length.  The Reissner Nordstrom solution for
  pointlike monopoles, might have little to do with these
-objects\ref\nair{K.Lee, V.P.Nair, E.Weinberg, {\it Phys. Rev. Lett.}{\bf
+objects \ref\nair{K.Lee, V.P.Nair, E.Weinberg, {\it Phys. Rev. Lett.}{\bf
 68},(1992),1100, hep-th 912008.}
 unless the magnetic charge is very large.  In that case the scale of
 the Reissner Nordstrom geometry is much larger than that of the internal
@@ -1322,7 +1322,7 @@ horizon formation and evaporation can be studied within the framework of
 a controlled approximation scheme.  One hopes to extract lessons from it
 that may be applicable to more realistic but less tractable problems and
 in
- particular to neutral black holes\foot{Recent work\ref\gidpostro{S.Giddings,
+ particular to neutral black holes\foot{Recent work \ref\gidpostro{S.Giddings,
 J.Polchinski, A.Strominger, {\it Phys. Rev.}{\bf D48},(1993),5748.} on
  exact
 string theoretic classical solutions for the region of space inside the
@@ -1337,7 +1337,7 @@ The Reissner-Nordstrom solution is not lightlike geodesically complete.  Much
 of the initial work in this area concentrated instead on the geodesically
 complete charged black hole solution of the version of scalar-tensor (dilaton)
 gravity
-that arises in string theory\ref\GMGHS{G.Gibbons,R.Maeda,{\it Nucl. Phys.}
+that arises in string theory \ref\GMGHS{G.Gibbons,R.Maeda,{\it Nucl. Phys.}
 {\bf B298},(1988),741; D.Garfinkle, G.Horowitz, A.Strom-\break
 inger, {\it Phys. Rev.}{\bf D43},(1991),3140.}.
 Although this solution is also singular, it is geodesically complete and the
@@ -1347,7 +1347,7 @@ controls quantum fluctuations, which suggests that quantum effects may well
 cure the singularity.  Indeed, portions of
 the geometry, shown in Fig. 1, are very similar
 to the geometry
- encountered in $1+1$ dimension soluble string theories\ref\1dstr{See {\bf
+ encountered in $1+1$ dimension soluble string theories \ref\1dstr{See {\bf
 The Large N Expansion in Quantum Field Theory and Statistical Physics},
 E.Brezin, S.Wadia, Editors, World Scientific, Singapore, 1993, for a\break
 comprehensive
@@ -1358,12 +1358,12 @@ region in which spacetime is approximately two dimensional.  The
 solution \GMGHS
 is, in that region, identical to the classical background of $1+1$ string
 theory, in the limit of vanishing tachyon condensate $\mu$.  In string theory,
-Knizhnik Polyakov Zamolodchikov (KPZ)\ref\kpz{D.Knizhnik, A.M.Polyakov,
+Knizhnik Polyakov Zamolodchikov (KPZ) \ref\kpz{D.Knizhnik, A.M.Polyakov,
 A.B. Zamolodchikov, {\it Mod. Phys. Lett.}{\bf A3},(1988),819.} scaling tells
 us that the
 effective loop expansion parameter is $1\over \mu$.  The perturbation series
 for the S matrix can be exactly computed and various resummations of it have
-been proposed\ref\moore{G.Moore, M.R.Plesser, S.Ramgoolam, {\it Nucl. Phys.}
+been proposed \ref\moore{G.Moore, M.R.Plesser, S.Ramgoolam, {\it Nucl. Phys.}
 {\bf B377},(1992),143, hep-th 9111035.}.  All of them have the property that
 the $\mu = 0$
 {\it quantum} theory is well defined, despite the blowup of the terms in the
@@ -1389,7 +1389,7 @@ to acquire a mass, drastically changing the form of the black hole solution
 in the asymptotic region.  However, unless the dilaton effective potential
 blows up in the
 horn of the cornucopion, it will not change the physics of the two dimensional
-region on which we shall concentrate\ref\horowharv{J.Horne, G.Horowitz,
+region on which we shall concentrate \ref\horowharv{J.Horne, G.Horowitz,
 {\it Nucl. Phys.}{\bf B399},(1993),169, hep-th 9210012; R. Gregory, J.Harvey,
 {\it Phys. Rev.}{\bf D47},(1993),2411, hep-th 9209070.}
 
@@ -1436,7 +1436,7 @@ apart from the usual Kaluza Klein $SO(3)$ gauge field, all of the non
 spherically
 symmetric modes propagate as massive waves inside the horn.  Thus, there is
 an effective two dimensional theory of long wavelength modes propagating
-in the horn\ref\giddstrom{C.Callan, S.Giddings, J.Harvey, A.Strominger,
+in the horn \ref\giddstrom{C.Callan, S.Giddings, J.Harvey, A.Strominger,
 {\it Phys. Rev.}{\bf D45},(1992),1005; S.Gidd-\break ings, A.Strominger
 hep-th 9202004.}
 \eqn\twodlag{{\cal L}_{CGHS} = e^{-2\Phi}\sqrt{-G}(R + 4(\nabla\Phi)^2
@@ -1467,7 +1467,7 @@ solutions of heterotic string theory.  In that theory, or in any other
 containing light electrically charged fermion fields, these solutions
 will have a large number of fermion zero modes.  Far away from the
 position of the black hole, these will be the Callan-Rubakov
-\ref\callanrub{C.Callan, {\it Phys. Rev.}{\bf D26},(1982),2058; V.Rubakov,
+ \ref\callanrub{C.Callan, {\it Phys. Rev.}{\bf D26},(1982),2058; V.Rubakov,
 {\it Nucl. Phys.}{\bf B203},(1982),311.}
 modes of charged fermions around a magnetic monopole.
 They fall into angular momentum multiplets with angular momentum $J = Q-1$.
@@ -1484,7 +1484,7 @@ and Kaluza Klein gauge
 fields have been neglected.  The fermions were treated as free apart from their
 gravitational interactions, and were bosonized into a set of free scalar
 fields, giving the
-famous lagrangian of Callan, Giddings, Harvey and Strominger (CGHS)\ref\cghs{
+famous lagrangian of Callan, Giddings, Harvey and Strominger (CGHS) \ref\cghs{
 C.Callan, S.Giddings, J.Harvey, A.Strominger, {\it Phys. Rev.}{\bf
 D45},(1992),1005.}:
 \eqn\CGHSlag{{\cal L} = \sqrt{|g|}\bigl{(}e^{-2\phi}[R + 4(\nabla\phi )^2 +
@@ -1563,7 +1563,7 @@ the boundary conditions.
 $\kappa = e^{2\Phi_0}Q$, is the usual rescaled coupling constant.
 The nature of the solutions of these equations has been discussed extensively
 in the literature
-\ref\numwork{T.Piran, A.Strominger, hep-th 9304148; S.Hawking, I.Stewart,
+ \ref\numwork{T.Piran, A.Strominger, hep-th 9304148; S.Hawking, I.Stewart,
 hep-th 9207105;\break
  B.Birnir, S.Giddings, G.Horowitz, A.Strominger, {\it Phys. Rev.}{\bf
 D46},(1992),638;
@@ -1659,7 +1659,7 @@ present below,that if
 \eqn\asympaa{D\rightarrow e^{n\Phi}}
 \eqn\asympba{W\rightarrow e^{m\Phi}}
 with $n\geq m-2$ as $\Phi\rightarrow\infty$, then
-the solutions are nonsingular there as well\ref\nonsing{T.Banks,
+the solutions are nonsingular there as well \ref\nonsing{T.Banks,
 M.O'Loughlin, {\it Phys. Rev.}{\bf D48},(1993),698.}.
 Here, $W$ is an auxiliary function which we will define below.
 
@@ -1675,7 +1675,7 @@ involves no derivatives, so that this can be viewed purely as a gravitational
 lagrangian with higher curvature interactions.
 It is a general result that all solutions of all lagrangians of this type
 have a Killing vector, and that $D$ is constant
-along the Killing flows\ref\minkgrav{T. Banks, M. O'Loughlin,
+along the Killing flows \ref\minkgrav{T. Banks, M. O'Loughlin,
  {\it Nucl. Phys.}{\bf B362},(1991),649.}.  Asymptotically, we want to tie on
 to the
 black hole solutions of the CGHS lagrangian and we thus take the Killing
@@ -1725,7 +1725,7 @@ given by
 There is no natural endpoint for Hawking radiation in such models.  We may
 expect that when coupled to matter
 fields they will lead to runaway solutions which Hawking radiate forever
-\ref\runaways{A.Bilal, C.Callan, {\it Nucl. Phys.}{\bf B394},(1993),7.;
+ \ref\runaways{A.Bilal, C.Callan, {\it Nucl. Phys.}{\bf B394},(1993),7.;
 S.P. deAlwis, {\it Phys. Lett.}{\bf B289},\break (1992),278, {\it Phys. Lett.}
 {\bf B300},(1993), 330;
 S.Giddings, A.Strominger, {\it Phys. Rev.}{\bf D46},\break (1993),2454.}.
@@ -1771,21 +1771,21 @@ rescaled large $N$ coupling, in order to
 avoid a CGHS type singularity.  With this constraint imposed, the equations
 were
 studied numerically for the case of
-$U(D)$ with two zeroes, by O'Loughlin and Lowe\ref\olow{M.O'Loughlin, D.Lowe,
+$U(D)$ with two zeroes, by O'Loughlin and Lowe \ref\olow{M.O'Loughlin, D.Lowe,
 {\it Phys. Rev.}{\bf D48},(1993),3735.}.  As mentioned, this case is very
 similar to the Reissner-Nordstrom
 geometry and \olow also carried out a numerical study of evaporation of
 Reissner-Nordstrom black holes.  This case
 had been treated previously by Strominger and Trivedi
-\ref\sandip{A.Strominger, S.Trivedi, {\it Phys. Rev.}{\bf D48},(1993),5778.},
+ \ref\sandip{A.Strominger, S.Trivedi, {\it Phys. Rev.}{\bf D48},(1993),5778.},
 using approximate analytical techniques.
 The evolution is completely nonsingular\foot{There is of course a timelike
 singularity in the Reissner-Nordstrom case, but this
 does not effect the qualitative nature of the evolution}, and leads to the
 following qualitative picture (Fig. 6).
 
-\ifig\fsix{Evolution of the Spatial Geometry of a Nonextremal Black Hole
-Back to an Extremal Remnant}
+\ifig\fsix{Evolution of the spatial geometry of a non-extremal black hole
+back to an extremal remnant}
 {\epsfysize=6cm \epsfbox{f6.eps}}
 
 When matter is incident on an extremal black hole, an apparent horizon is
@@ -1826,7 +1826,7 @@ that could be attained via nonsingular evolution, which would not
 contain Cauchy horizons, have the form of Fig. 7
 (Fig. 2 is a special case of this).
 
-\ifig\fseven{Possible Causal Structures of Black Hole Remnants}
+\ifig\fseven{Possible causal structures of black hole remnants}
 {\epsfysize=6cm \epsfbox{f7.eps}}
 
 That is to say, the structure would be similar to that of the classical
@@ -1848,7 +1848,7 @@ infinite production cross sections.  In doing so I must confess to a gross
 error that I have made
 in much of my published work on this subject, which has misled others as well
 as myself.  In early
-work\ref\corn{T.Banks, A.Dabolkhar, M.Douglas, M. O'Loughlin, {\it Phys. Rev.}
+work \ref\corn{T.Banks, A.Dabolkhar, M.Douglas, M. O'Loughlin, {\it Phys. Rev.}
 {\bf D45},(1992),3607.} I stated that the infinite numbers of degenerate
 states of the cornucopion
 were in fact causally connected to the external world.  They were supposed to
@@ -1867,7 +1867,7 @@ cornucopion are the states of quantum fields lying behind this horizon.
 The model for all discussions of production of nontrivial classical field
 configurations from
 the vacuum of a quantum field theory, is a classic paper of
-Affleck and Manton\ref\affmant{I.Affleck, N.Manton, {\it Nucl. Phys.}
+Affleck and Manton \ref\affmant{I.Affleck, N.Manton, {\it Nucl. Phys.}
 {\bf B194},(1982),38.}.  These authors studied pair production
 of `t Hooft-Polyakov monopoles in a constant magnetic field, and showed
 that in the small field limit the amplitude reduced to Schwinger's formula
@@ -1889,7 +1889,7 @@ this Euclidean instanton.
 
 We do not really understand the Euclidean continuation of quantum gravity, but
 at the semiclassical level, there is a long tradition of seemingly sensible
-calculations\ref\eucgrav{S.Hawking, G.Gibbons, {\it Phys. Rev.}
+calculations \ref\eucgrav{S.Hawking, G.Gibbons, {\it Phys. Rev.}
 {\bf D15},(1977),2752; D.Gross, M.Perry, L.Yaffe, {\it Phys. Rev.}{\bf D25},
 (1982),330;
  S.Coleman, F.Delucia, {\it Phys. Rev.}{\bf D21},(1980),2133.} which simply
@@ -1947,11 +1947,11 @@ solution
 will lead to an instanton which creates only finite spatial volumes, namely
 only the volume of space in front of the horizon of the moving black hole.
 This had been shown previously for extremal Reissner Nordstrom black holes by
-Garfinkle and Strominger\ref\garfstrom{D.Garfinkle, A.Strominger,
+Garfinkle and Strominger \ref\garfstrom{D.Garfinkle, A.Strominger,
 {\it Phys. Lett.}{\bf B256},(1991),146.}.  Recently, this claim has been
 challenged in the
 case of dilaton black holes in string theory
-\ref\horgidd{F.Dowker, J.Gauntlett, S.Giddings, G.Horowitz, {\it Phys. Rev.}
+ \ref\horgidd{F.Dowker, J.Gauntlett, S.Giddings, G.Horowitz, {\it Phys. Rev.}
 {\bf D49},(1994),2909,hep-th 9312172.},
 but it is unclear whether the infinite instantons that have been exhibited
 really contribute to production processes.  The quantum corrections around
@@ -2222,7 +2222,7 @@ area of its horizon.  A microphysical demonstration that the vicinity of
 the horizon really contains the number of states indicated by the
 Bekenstein- Hawking entropy formula would seem to depend on knowledge of
 physics at very short distances.  Here we make contact with the point of
-view of 't Hooft\ref\'tH{G. 't Hooft, {\it Nucl. Phys.}{\bf B256},(1985),727.}
+view of 't Hooft \ref\'tH{G. 't Hooft, {\it Nucl. Phys.}{\bf B256},(1985),727.}
  who has long insisted that the divergence of
 the entropy of entanglement of the state of a quantum field theory
 outside the horizon with that of the inside was the key to understanding
@@ -2430,7 +2430,7 @@ Growing cross sections
 are built into string theory, since it is Regge behaved and the intercept of
 the graviton trajectory
 is $2$.  A very picturesque way of understanding this has been developed by
-Karliner Klebanov and Susskind\ref\klebsuss{M.Karliner, I.Klebanov,
+Karliner Klebanov and Susskind \ref\klebsuss{M.Karliner, I.Klebanov,
 L.Susskind, {\it Int. J. Mod. Phys.}{\bf A3},(1988),1981.}
 who did Monte Carlo simulations
 of the distribution of strings predicted by the wave functions of free
@@ -2687,7 +2687,7 @@ long been believed that in the finite temperature case,
 this divergence is the signal of a phase
 transition to a new phase of string theory.  In particular,
 Atick
-and Witten\ref\Atick{J.Atick, E.Witten, {\it Nucl. Phys.}{\bf B310},(1988),
+and Witten \ref\Atick{J.Atick, E.Witten, {\it Nucl. Phys.}{\bf B310},(1988),
 291.} have argued that this phase transition is of
 first order.  Formally, the precursor of the transition is a tachyonic
 mass for certain winding
@@ -2722,7 +2722,7 @@ interesting conclusion.  In classical physics, we can throw an infinite
 amount of information into a black hole, and the Schwarzchild observer
 can measure it.  The BH formula suggests that this infinity is cutoff
 by quantum effects.  Bekenstein has tried to argue
-\ref\bekbound{J.Bekenstein, {\it Phys. Rev.}{\bf D7},(1973),2333,
+ \ref\bekbound{J.Bekenstein, {\it Phys. Rev.}{\bf D7},(1973),2333,
 {\it Phys. Rev.}{\bf D9},(1974),3292,
 {\it Phys. Rev.}{\bf D49},\break (1994),1912.} that
 this cutoff reflects a fundamental quantum gravitational restriction on
@@ -2837,9 +2837,9 @@ exciting than the conservative approach that I have advocated.  It leads
 to the notion of ``holographic'' theories of spacetime in which the number
 of states of a space with $D$ dimensions is a finite multiple of the area
 of a transverse spatial slice like a black hole horizon
-\ref\holograph{G. 't Hooft, gr-qc 9310006; L. Susskind, hep-th 9409089 }.
+ \ref\holograph{G. 't Hooft, gr-qc 9310006; L. Susskind, hep-th 9409089 }.
 There are even indications that string theory is such a holographic theory
-\ref\stringholo{L. Susskind, op. cit.; C. Thorn,
+ \ref\stringholo{L. Susskind, op. cit.; C. Thorn,
 {\it Reformulating String Theory With the ${1\over N}$
  Expansion}, \break Talk Given at the First International A.D.Sakharov
 Conference, Moscow,
@@ -2869,7 +2869,7 @@ should be pursued vigorously, as well as the question of the number of
 cornucopions expected in our horizon volume.  These questions bear on the only
 experimentally accessible aspect of our subject.  The second path is the
 verification of the 't Hooft-Susskind picture of the states that are counted
-by the Bekenstein-Hawking entropy of a black hole\ref\atish{A.Dabolkhar,
+by the Bekenstein-Hawking entropy of a black hole \ref\atish{A.Dabolkhar,
 hep-th 9409158.}.  I deliberately split off from
 this a third path: the study of holographic theories, that is theories
 in which the S-matrix of the external observer is exactly unitary.
