--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-12-07 08:08:42 -0500 
+%% Created for Pete Su at 2024-12-08 17:28:01 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Horowitz1998,
+	author = {Horowitz, Gary T},
+	date-added = {2024-12-08 17:27:17 -0500},
+	date-modified = {2024-12-08 17:27:52 -0500},
+	journal = {Black holes and relativistic stars},
+	note = {\href{http://arxiv.org/abs/gr-qc/9704072v3}{arxiv:gr-qc/9704072}},
+	pages = {241--266},
+	publisher = {University of Chicago Press Chicago},
+	title = {Quantum states of black holes},
+	year = {1998}}
 
 @article{Chen2015,
 	author = {Chen, P. and Ong, Y.C. and Yeom, D.-h.},
