--- a/QFTCS_course/QFTCS_course copy.tex
+++ b/QFTCS_course/QFTCS_course copy.tex
@@ -80,7 +80,7 @@ pdfproducer = {LyX + LaTeX with hyperref package + dvips + ps2pdf},
 \usepackage{babel}
 \makeatother
 
-\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.1}
 \input{../helpers/cmrsum}
 
@@ -100,6 +100,7 @@ pdfproducer = {LyX + LaTeX with hyperref package + dvips + ps2pdf},
 \maketitle
 \tableofcontents{}
 
+\newpage
 
 \subsection*{Preface\addcontentsline{toc}{subsection}{Preface}}
 
