--- a/QFTCS_course/QFTCS_course copy.tex
+++ b/QFTCS_course/QFTCS_course copy.tex
@@ -77,6 +77,13 @@ pdfproducer = {LyX + LaTeX with hyperref package + dvips + ps2pdf},
 ,menucolor=blue,}
 \usepackage{psfrag}
 
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\setcounter{tocdepth}{3}
+
 \usepackage{babel}
 \makeatother
 
