--- a/2412.15143/letter_P5+.tex
+++ b/2412.15143/letter_P5+.tex
@@ -1,7 +1,7 @@
 % Supernovae evidence for foundational change to cosmological models
-\documentclass[fleqn,usenatbib]{mnras}
+\documentclass[fleqn,usenatbib,onecolumn,referee]{mnras}
 
-\usepackage{newtxtext,newtxmath}
+\usepackage{newpxtext,newpxmath}
 \usepackage{threeparttable}
 \usepackage{academicons}
 
@@ -35,9 +35,46 @@
 \usepackage[mathscr]{euscript}
 \usepackage{gensymb}
 \usepackage{cuted}
-\usepackage{widetext}
 \usepackage{enumitem}
 \usepackage{minibox}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %%%%%%%%%%%%%
 \newcommand{\pplus}{Pantheon$+$}
@@ -252,7 +289,7 @@ where $\mathcal{N}\left(M\Ns{B}|\bar{M}\Ns{B},\sigma_{M\Ns{B}}\right)$ is a norm
 
 Equivalently, given a single-shot inference for any physical quantity, the best guess for its true value is precisely the one inferred through the observational procedure. The assumption of being the most probable value introduces a caveat that it may, however, potentially overlook astrophysical systematics inherent in the SALT2 light curve procedure.
 
-aOur approach here has essential differences from previous methodology \citep{Nielsen_2016, Dam_2017, Lane_2023}, and is not merely a change of priors. Earlier work assumed that all supernovae are drawn from ideal independent Gaussian distributions in stretch ($x\Z 1$) and in colour ($c$), with mean values and standard deviations derived from the cosmological fit. In contrast, this study does not assume any particular statistical distribution for $x\Z 1$ and $c$, nor do we assume these parameters follow the same ideal distribution across the supernova sample. Instead, $x\Z 1$ and $c$ are treated as fixed, with values provided by the SALT2 fit. \citet{Taylor_2021} show through simulations that SALT2 reliably recovers input supernova parameters. To compare this method with the previous one, we use the same dataset as \citet{Lane_2023}.
+Our approach here has essential differences from previous methodology \citep{Nielsen_2016, Dam_2017, Lane_2023}, and is not merely a change of priors. Earlier work assumed that all supernovae are drawn from ideal independent Gaussian distributions in stretch ($x\Z 1$) and in colour ($c$), with mean values and standard deviations derived from the cosmological fit. In contrast, this study does not assume any particular statistical distribution for $x\Z 1$ and $c$, nor do we assume these parameters follow the same ideal distribution across the supernova sample. Instead, $x\Z 1$ and $c$ are treated as fixed, with values provided by the SALT2 fit. \citet{Taylor_2021} show through simulations that SALT2 reliably recovers input supernova parameters. To compare this method with the previous one, we use the same dataset as \citet{Lane_2023}.
 
 Therefore, by now following the same procedure as in \citet{Lane_2023}, we find the likelihood to be
 \begin{align}
