--- a/1412.8366/RemnantPublishedVer.tex
+++ b/1412.8366/RemnantPublishedVer.tex
@@ -354,12 +354,10 @@ Note that condition (ii), i.e., the so-called \emph{null Ricci condition}, is pr
 
 Of course, a (quasi-local) black hole by definition should have a trapped surface or an apparent horizon. Therefore, the existence of a regular black hole means one of the following:
 \begin{itemize}
-\item[(A)] \underline{Violation of the global hyperbolicity assumption:} static limits of Bardeen black hole \cite{Bardeen}, Frolov-Markov-Mukhanov model (see Figure \ref{fig:regular})\cite{Frolov:1988vj}, Hayward model \cite{Hayward:2005gi} (see Figure \ref{fig:regular_2}) and its extension to the rotating case \cite{1410.4043}, charged black holes with non-linear electrodynamics \cite{AyonBeato:1999rg}, etc.
-\item[(B)] \underline{Violation of the null energy condition:} phantom black holes \cite{Bronnikov:2005gm}, or some of the dynamical regular black holes (e.g., in the Vaidya approximation or numerical realization) \cite{Hayward:2005gi}.
-\item[(C)] \underline{Modifications of Einstein field equations:} loop quantum black hole models \cite{Modesto:2005zm}, non-commutative regular black hole models \cite{Nicolini:2005vd}, etc.  
+\item[(A)] {\it Violation of the global hyperbolicity assumption:} static limits of Bardeen black hole \cite{Bardeen}, Frolov-Markov-Mukhanov model (see Figure \ref{fig:regular})\cite{Frolov:1988vj}, Hayward model \cite{Hayward:2005gi} (see Figure \ref{fig:regular_2}) and its extension to the rotating case \cite{1410.4043}, charged black holes with non-linear electrodynamics \cite{AyonBeato:1999rg}, etc.
+\item[(B)] {\it Violation of the null energy condition:} phantom black holes \cite{Bronnikov:2005gm}, or some of the dynamical regular black holes (e.g., in the Vaidya approximation or numerical realization) \cite{Hayward:2005gi}.
+\item[(C)] {\it Modifications of Einstein field equations:} loop quantum black hole models \cite{Modesto:2005zm}, non-commutative regular black hole models \cite{Nicolini:2005vd}, etc.  
 \end{itemize}
-
-
 Take the case of the Bardeen black hole as an example, it corresponds to scenario (A) since it has an inner Cauchy horizon. However, for dynamical cases that include the formation and evaporation processes, the assumption of global hyperbolicity should be imposed at the beginning (so that we know how to evolve the system); then the available option within general relativity would be (B), which is achieved via Hawking radiation. In such a case, one has to solve all the dynamical processes (such as the generation and disappearance of the outer and inner apparent horizons due to Hawking radiation, which is of course a monumental task. Such a check was carried out numerically in \cite{Hwang:2012nn}). {\color{black}Nevertheless, it should be pointed out that one needs the Hawking effect to be strong enough to avoid the formation of singularities. It is not clear how generic -- or how physical -- such a singularity avoidance mechanism can be. See, for example, the discussion in \cite{roman}. We also remark that, in a large class of spacetimes that satisfy the weak energy condition, the existence of a regular black hole requires the change of the topology \cite{9612057}.}
 
 \begin{figure}
