--- a/gr-qc-0702082/clocks.tex
+++ b/gr-qc-0702082/clocks.tex
@@ -5,17 +5,64 @@
 % file: clocks.tex: Feb 2007, revised Oct 2007
 % David Wiltshire
 %------------------------------------------------
-\documentclass[12pt]{iopart}
-\usepackage{setstack}
+\documentclass[12pt]{article}
+%\usepackage{setstack}
 \usepackage{amssymb}
 %------------------------------------------------
 \usepackage{bm}
 \usepackage{graphicx}% Include figure files
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 %--------------------------------------------------------------------
 
 \begin{document}
 %--------------------------------------------------------------------
-\rightline{{\bf New J.\ Phys.\ 9 (2007) 377}, Focus Issue on Dark Energy}
 %-----------------------------------------------------------------
 % Local definitions
 \font\bm=cmmib10 \def\B#1{\hbox{\bm#1}} \def\Bom{\B{\char33}}
@@ -91,11 +138,13 @@ $}}} \def\dL{d\Z L} \def\dA{D\Z A} \def\rhcr{\rh\ws{cr}}
 %-----------------------------------------------------------------
 \author{David L. Wiltshire}
 %-----------------------------------------------------------------
-\address{Department of Physics and Astronomy, University of Canterbury,
-Private Bag 4800, Christchurch 8140, New Zealand}
+%\address{Department of Physics and Astronomy, University of Canterbury,
+%Private Bag 4800, Christchurch 8140, New Zealand}
 %-----------------------------------------------------------------
-\eads{\mailto{David.Wiltshire@canterbury.ac.nz}\\
-http://www2.phys.canterbury.ac.nz/$\goesas$dlw24/}
+%\eads{\mailto{David.Wiltshire@canterbury.ac.nz}\\
+%http://www2.phys.canterbury.ac.nz/$\goesas$dlw24/}
+\date{1 Nov 2007}
+\maketitle
 
 \begin{abstract}
 Cosmic acceleration is explained quantitatively, purely in
@@ -3915,7 +3964,7 @@ than alternative hypotheses which ignore these foundational questions.
 
 %{\em``Raffiniert ist der Herr Gott, aber boshaft ist er nicht.''}
 %------------------------------------------------
-\ack
+\section{Ack}
 %------------------------------------------------
 
 This work was supported by the Mardsen Fund of the Royal Society of New
